[package]
name = "layer-win"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
