[package]
name = "mirrord-agent"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
mirrord-protocol = { path = "../protocol" }
mirrord-agent-env = { path = "./env", default-features = false }
mirrord-agent-iptables = { path = "./iptables" }
mirrord-tls-util = { path = "../tls-util" }

containerd-client = "0.6"
tokio = { workspace = true, features = [
    "rt",
    "net",
    "macros",
    "fs",
    "process",
    "signal",
] }

serde.workspace = true
serde_json.workspace = true
pnet = "0.35"
nix = { workspace = true, features = ["mount", "sched", "user"] }
clap = { workspace = true, features = ["env"] }
actix-codec.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
hickory-resolver.workspace = true
bollard = "0.18"
tokio-util.workspace = true
streammap-ext.workspace = true
libc.workspace = true
faccess = "0.2"
bytes.workspace = true
wildmatch = "2"
enum_dispatch.workspace = true
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util.workspace = true
httparse = "1"
fancy-regex = { workspace = true }
dashmap = { version = "6" }
oci-spec = "0.7.0"
tonic = "0.12"
tower.workspace = true
http.workspace = true
k8s-cri = "0.9"
semver.workspace = true
tokio-rustls.workspace = true
x509-parser.workspace = true
rustls.workspace = true
socket2.workspace = true
prometheus = { version = "0.13", features = ["process"] }
axum = { version = "0.7", features = ["macros"] }
rawsocket = { git = "https://github.com/metalbear-co/rawsocket.git" }
procfs = "0.17.0"
rcgen.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
pem.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rstest.workspace = true
tempfile.workspace = true
