[package]
name = "mirrord-agent"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
mirrord-protocol = { path = "../protocol" }
mirrord-agent-env = { path = "./env", default-features = false }
mirrord-agent-iptables = { path = "./iptables" }
mirrord-tls-util = { path = "../tls-util" }

# they didn't release version with latest tonic..
containerd-client = {git = "https://github.com/containerd/rust-extensions.git", rev = "3b272b01a2328ddb5c58e7f5c8b8ecaaf7af262f"}
tokio = { workspace = true, features = [
    "rt",
    "net",
    "macros",
    "fs",
    "process",
    "signal",
] }

async-pidfd.workspace = true
serde.workspace = true
serde_json.workspace = true
nix = { workspace = true, features = ["mount", "sched", "user"] }
clap = { workspace = true, features = ["env"] }
actix-codec.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
hickory-resolver.workspace = true
bollard = "0.18"
tokio-util.workspace = true
streammap-ext.workspace = true
libc.workspace = true
faccess = "0.2"
bytes.workspace = true
wildmatch = "2"
enum_dispatch.workspace = true
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util.workspace = true
httparse = "1"
fancy-regex = { workspace = true }
oci-spec = "0.7.0"
tonic = "0.14"
tower.workspace = true
http.workspace = true
k8s-cri = {git = "https://github.com/metalbear-co/k8s-cri.git", rev = "14d24d6a35b6ea44e8a74f9e5904db94162f304a"}
semver.workspace = true
tokio-rustls.workspace = true
x509-parser.workspace = true
rustls.workspace = true
socket2.workspace = true
prometheus = { version = "0.14", features = ["process"] }
axum = { version = "0.7", features = ["macros"] }
procfs = "0.17.0"
rcgen.workspace = true
serde_json_path.workspace = true
dns-lookup = "3"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pem.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rstest.workspace = true
tempfile.workspace = true
rand.workspace = true
