[package]
name = "mirrord-analytics"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true


[dependencies]
base64 = "0.21"
serde.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
assert-json-diff = "2"
