[package]
name = "mirrord-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
client = [
	"dep:home",
	"dep:flate2",
	"dep:fs4",
	"dep:k8s-openapi",
	"dep:kube",
	"dep:reqwest",
	"dep:serde_yaml",
	"dep:thiserror",
	"dep:tokio",
	"dep:tracing",
	"dep:whoami"
]

[dependencies]
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
whoami = { version = "1", optional = true }
home = { workspace = true, optional = true }
pem.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }
fs4 = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs"], optional = true  }
thiserror = { workspace = true, optional = true }
x509-certificate = "0.24"
reqwest = { workspace = true, features=["json", "rustls-tls-native-roots"], default-features = false, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
bcder = "0.7"
