[package]
name = "mirrord-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
client = [
	"dep:home",
	"dep:flate2",
	"dep:fs4",
	"dep:k8s-openapi",
	"dep:kube",
	"dep:reqwest",
	"dep:serde_yaml",
	"dep:thiserror",
	"dep:tokio",
	"dep:tracing",
	"dep:whoami",
]

[dependencies]
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
whoami = { workspace = true, optional = true }
home = { workspace = true, optional = true }
pem.workspace = true
flate2 = { workspace = true, optional = true }
fs4 = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
serde.workspace = true
serde_yaml = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs"], optional = true  }
thiserror = { workspace = true, optional = true }
x509-certificate.workspace = true
reqwest = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
bcder.workspace = true
http.workspace = true
tower-test.workspace = true

[lib]
doctest = false
