[package]
name = "mirrord-config"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-config-derive = { path = "./derive" }
mirrord-analytics = { path = "../analytics" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
toml = "0.8"
schemars.workspace = true
bimap = { version = "0.6" }
nom = "7.1"
ipnet.workspace = true
bitflags = "2"
k8s-openapi = { workspace = true, features = ["schemars", "earliest"] }
tera = "1"
fancy-regex.workspace = true
base64.workspace = true
rustls.workspace = true

[dev-dependencies]
rstest.workspace = true
