[package]
name = "mirrord-config"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-config-derive = { path = "./derive" }
mirrord-analytics = { path = "../analytics" }
mirrord-protocol = { path = "../protocol" }

clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
toml = "0.8"
schemars.workspace = true
bimap = { version = "0.6" }
nom = "7.1"
ipnet.workspace = true
bitflags = "2"
k8s-openapi = { workspace = true, features = ["schemars", "v1_30"] }
tera = "1"
fancy-regex.workspace = true
base64.workspace = true
rand.workspace = true
rustls.workspace = true
strum.workspace = true
strum_macros.workspace = true
semver.workspace = true
uuid.workspace = true
jaq-all = "0.1.0-beta"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
