[package]
name = "mirrord-config"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-config-derive = { path = "./derive" }
mirrord-analytics = { path = "../analytics" }
mirrord-protocol = { path = "../protocol" }
# We don't need the `eval` feature here because we only want to compile
# the `jaq` code to verify its validity, but we don't need to run it here.
mirrord-jaq = { path = "../jaq", default-features = false}

clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
toml.workspace = true
schemars.workspace = true
bimap.workspace = true
nom.workspace = true
ipnet.workspace = true
bitflags.workspace = true
k8s-openapi = { workspace = true, features = ["schemars", "v1_31"] }
tera.workspace = true
fancy-regex.workspace = true
base64.workspace = true
rand.workspace = true
rustls.workspace = true
strum.workspace = true
strum_macros.workspace = true
semver.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lib]
doctest = false
