[package]
name = "mirrord-console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "mirrord-console"
required-features = ["binary"]

[features]
default = []
binary = ["dep:axum", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
axum = { version = "0.6", features = ["default", "ws"], optional = true }
log = { version = "0.4", features = ["std", "serde"] }
miette = "5"
tungstenite = "0.18"

futures.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ['sync'] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }