[package]
name = "mirrord-console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "mirrord-console"
required-features = ["binary"]

[features]
default = []
binary = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
mirrord-intproxy = { path = "../intproxy" }
tokio.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
log = { version = "0.4", features = ["std"] }
bincode.workspace = true
miette = "5"
thiserror.workspace = true
drain.workspace = true
tokio-util.workspace = true