[package]
name = "mirrord-console"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "mirrord-console"
required-features = ["binary"]

[features]
default = []
binary = ["dep:tracing", "dep:tracing-subscriber", "dep:tokio", "mirrord-intproxy-protocol/codec-async"]
async-logger = ["mirrord-intproxy-protocol/codec-async", "dep:tokio", "dep:drain", "dep:tokio-util"]

[dependencies]
mirrord-intproxy-protocol = { path = "../intproxy/protocol", features = ["codec"] }

bincode.workspace = true
log = { version = "0.4", features = ["std"] }
miette = "5"
thiserror.workspace = true

tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
drain = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
