[package]
name = "mirrord-http"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
httparse = "1.8"
