[package]
name = "mirrord-http"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tracing.workspace = true
hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "*", features = ["full"] }
httparse = "*"
