[package]
name = "mirrord-intproxy"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirrord-config = { path = "../config" }
mirrord-kube = { path = "../kube" }
mirrord-operator = { path = "../operator", features = ["client"] }
mirrord-protocol = { path = "../protocol" }
mirrord-protover = { path = "../protover" }
mirrord-intproxy-protocol = { path = "./protocol", features = ["codec-async"] }
mirrord-analytics = { path = "../analytics"}

serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true

rand = "0.8"
