[package]
name = "mirrord-intproxy"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirrord-config = { path = "../config" }
mirrord-kube = { path = "../kube", features = ["portforward"] }
mirrord-operator = { path = "../operator", features = ["client"] }
mirrord-protocol = { path = "../protocol" }
mirrord-intproxy-protocol = { path = "./protocol", features = ["codec-async"] }
mirrord-analytics = { path = "../analytics" }
mirrord-tls-util = { path = "../tls-util" }
mirrord-progress = { path = "../progress" }

futures.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
rustls.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio-retry.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rand.workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies]
rand.workspace = true

[dev-dependencies]
rcgen.workspace = true
rstest.workspace = true
