[package]
name = "mirrord-layer-lib"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-protocol = { path = "../protocol" }

libc.workspace = true
tracing.workspace = true
thiserror.workspace = true
