[package]
name = "mirrord-layer-lib"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-config = { path = "../config" }
mirrord-protocol = { path = "../protocol" }
mirrord-layer-macro = { path = "../layer/macro" }
mirrord-intproxy-protocol = { path = "../intproxy/protocol", features = ["codec"] }

bincode.workspace = true
socket2.workspace = true
tracing.workspace = true
thiserror.workspace = true
base64.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true
frida-gum.workspace = true

[target.'cfg(windows)'.dependencies]
str-win = { path = "../str-win" }
winapi.workspace = true
windows.workspace = true
