[package]
name = "mirrord-layer-test-utils"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mirrord-config = { path = "../config" }
mirrord-intproxy = { path = "../intproxy" }
mirrord-protocol = { path = "../protocol" }


actix-codec.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt", "net", "macros", "fs", "rt-multi-thread"] }

